Add JTE templates